--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: 			The Gamer's Reader
 description:	Landpage of "The Gamer's Reader", the best gaming news iOS app
 #url: 			http://localhost:4000
-url: 			http://www.thegamersreader.com
+url: 			http://thegamersreader.com
 
 markdown: 		redcarpet
 pygments: 		true
