--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 name:        The Gamer's Reader
 title:       TGR
 description: Landpage of "The Gamer's Reader", the best gaming news iOS app
-#url:         http://localhost:4000
-url:         http://thegamersreader.com
+url:         http://localhost:4000
+#url:         http://thegamersreader.com
 
 markdown:    redcarpet
 pygments:    true
